styles:fix share-bar alignment

--- a/resources/site-theme/votebeat/scss/components/article/_sharebar.scss
+++ b/resources/site-theme/votebeat/scss/components/article/_sharebar.scss
@@ -4,6 +4,7 @@
   margin-bottom: 16px;
   display: flex;
   position: relative;
+  width: 100%;
 
   ul {
     display: grid;
